added title for app started under gnome